--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>SSK</title>
     <link rel="icon" href="favicon.png" type="image/png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <script src="https://cdn.counter.dev/script.js" data-id="2b131a66-994e-4013-98ce-179a49d87eca" data-utcoffset="-5"></script>
     <!-- Link to your external CSS file -->
     <link rel="stylesheet" href="styles.css">
 </head>
